--- a/nginx/servers/workers.prod.conf
+++ b/nginx/servers/workers.prod.conf
@@ -1,6 +1,6 @@
-# worker-engine
+# openworkers-runner
 upstream workers_server {
-  server worker-engine:8080;
+  server openworkers-runner:8080;
 }
 
 include servers/workers.conf;
