--- a/nginx/rules/proxy.conf
+++ b/nginx/rules/proxy.conf
@@ -1,6 +1,6 @@
-proxy_connect_timeout 10s;
+# proxy_connect_timeout 10s;
 
-proxy_send_timeout 10s;
+# proxy_send_timeout 10s;
 
 # http://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_set_header
 proxy_set_header Connection ""; # Clear default connection header
