--- a/nginx/rules/sse.conf
+++ b/nginx/rules/sse.conf
@@ -12,3 +12,5 @@ proxy_pass_header X-Accel-Buffering; # Pass X-Accel-Buffering header from upstre
 add_header Keep-Alive "timeout=300, max=3600"; # timeout=5 minutes, max=1 hour
 
 proxy_read_timeout 320s; # 5 minutes + 20 seconds (Server should send data in 5 minutes, otherwise it should close the connection itself)
+
+proxy_buffering off;
