--- a/nginx/servers/dash.dev.conf
+++ b/nginx/servers/dash.dev.conf
@@ -76,6 +76,22 @@ server {
     proxy_pass http://log_server;
   }
 
+  # Proxy to logs (WebSocket)
+  location ~ ^/api/v1/workers/(?<wid>.+)/ws-logs$ {
+    add_header NGX-Request-Id $rid;
+    add_header NGX-Nginx-Path 'logs';
+    add_header NGX-Nginx-Worker-Id $wid;
+
+    client_max_body_size 32K;
+
+    proxy_pass_header Host;
+
+    include rules/proxy.conf;
+    include rules/ws.conf;
+
+    proxy_pass http://log_server;
+  }
+
   # Proxy to /api
   location /api {
     add_header NGX-Request-Id $rid;
@@ -84,7 +100,7 @@ server {
     client_max_body_size 3M;
 
     include rules/proxy.conf;
-    proxy_read_timeout 10s;
+    # proxy_read_timeout 10s;
     proxy_pass_header Host;
 
     proxy_pass http://api_server;
