--- a/nginx/servers/dash.prod.conf
+++ b/nginx/servers/dash.prod.conf
@@ -2,80 +2,42 @@ limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=1r/s;
 
 upstream api_server {
   # http://nginx.org/en/docs/http/ngx_http_upstream_module.html#keepalive
-  server dash-api:7000;
+  server openworkers-api:7000;
   keepalive 16;
 }
 
 upstream log_server {
   # http://nginx.org/en/docs/http/ngx_http_upstream_module.html#keepalive
-  server dash-api:7000;
+  server openworkers-logs:8080;
   keepalive 32;
+}
+
+upstream dash_server {
+  server openworkers-dash:80;
+  keepalive 16;
 }
 
 server {
   listen 443 ssl; http2 on;
-  server_name dash.dev.kube dash.dev.localhost dash.openworkers.com;
+  server_name dash.dev.kube dash.dev.localhost dash.openworkers.dev dash.openworkers.com;
 
   set $sid 'api';
 
   # SSL configuration
   include rules/ssl.conf;
 
-  try_files $uri =404;
-  root /srv/http/dash-static;
-
-  # Matches output-hashed files (has a hash in the filename).
-  location ~ "^\/.+\.(?<hash>[0-9a-f]{16})(\.min)?\.(js|css)$" {
-    expires 10y;
-    access_log off;
-
-    add_header X-Matching-Path  src        always;
-    add_header X-Request-Id     $rid       always;
-    add_header X-Server-Id      $sid       always;
-    add_header X-Src-Hash       $hash      always;
-    add_header X-Proxy-Name     $hostname  always;
-
-    add_header Cache-Control 'public, immutable';
-  }
-
-  # Mapping /min-maps to /assets/monaco-editor/min-maps
-  location ~ ^/min-maps {
-    expires 10d;
-    access_log off;
-
-    root /srv/http/dash-static/assets/monaco-editor;
-
-    add_header X-Matching-Path  min-maps   always;
-    add_header X-Request-Id     $rid       always;
-    add_header X-Server-Id      $sid       always;
-    add_header X-Proxy-Name     $hostname  always;
-  }
-
-  # Matches other static files (has a dot in the filename).
-  location ~ .*(\.).*$ {
-    expires 10d;
-    access_log off;
-
-    add_header X-Matching-Path  static     always;
-    add_header X-Request-Id     $rid       always;
-    add_header X-Server-Id      $sid       always;
-    add_header X-Proxy-Name     $hostname  always;
-  }
-
-  # Matches index.html
+  # Proxy to dashboard for static files
   location / {
-    expires 10d;
-    access_log off;
-
-    try_files $uri /index.html =404;
-
-    add_header X-Matching-Path  static-app  always;
-    add_header X-Request-Id     $rid        always;
-    add_header X-Server-Id      $sid        always;
+    add_header X-Matching-Path  dash       always;
+    add_header X-Request-Id     $rid       always;
+    add_header X-Server-Id      $sid       always;
     add_header X-Proxy-Name     $hostname  always;
+
+    include rules/proxy.conf;
+    proxy_pass http://dash_server;
   }
 
-  # Proxy to logs
+  # Proxy to logs (SSE)
   location ~ ^/api/v1/workers/(?<wid>.+)/logs$ {
     add_header X-Matching-Path  logs       always;
     add_header X-Request-Id     $rid       always;
@@ -93,6 +55,22 @@ server {
     proxy_pass http://log_server;
   }
 
+  # Proxy to logs (WebSocket)
+  location ~ ^/api/v1/workers/(?<wid>.+)/ws-logs$ {
+    add_header X-Matching-Path  ws-logs    always;
+    add_header X-Request-Id     $rid       always;
+    add_header X-Server-Id      $sid       always;
+    add_header X-Worker-Id      $wid       always;
+    add_header X-Proxy-Name     $hostname  always;
+
+    proxy_pass_header Host;
+
+    include rules/proxy.conf;
+    include rules/ws.conf;
+
+    proxy_pass http://log_server;
+  }
+
   # Proxy to /api
   location /api {
     add_header X-Matching-Path  api        always;
@@ -103,7 +81,7 @@ server {
     client_max_body_size 3M;
 
     include rules/proxy.conf;
-    proxy_read_timeout 10s;
+    # proxy_read_timeout 10s;
     proxy_pass_header Host;
 
     proxy_pass http://api_server;
