Increase body size

--- a/nginx/servers/workers.conf
+++ b/nginx/servers/workers.conf
@@ -29,6 +29,8 @@ server {
   # SSL configuration (certs must be set before config)
   include rules/ssl.conf;
 
+  client_max_body_size 4M;
+
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,8 +46,6 @@ server {
   location / {
     add_header NGX-Request-Id $rid;
     add_header NGX-Nginx-Path 'workers';
-
-    client_max_body_size 500K;
 
     proxy_buffering on;
     proxy_pass http://workers_server;
