--- a/compose.yml
+++ b/compose.yml
@@ -19,6 +19,7 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+
   # NATS
   nats:
     image: nats:2.12.2-alpine3.22
@@ -28,6 +29,7 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+
   # OpenWorkers API
   openworkers-api:
     image: ghcr.io/openworkers/openworkers-api:v1.2.1
@@ -47,6 +49,7 @@ services:
       timeout: 5s
       retries: 5
       start_period: 10s
+
   # Postgate (HTTP proxy for Postgres)
   # Uses OpenWorkers database via views (postgate_databases, postgate_tokens)
   postgate:
@@ -59,11 +62,13 @@ services:
       - POSTGATE_SKIP_MIGRATIONS=true
     depends_on:
       - postgres
+
   # OpenWorkers Proxy
   openworkers-proxy:
     image: nginx:1.25.1-alpine-slim
     depends_on:
       - openworkers-runner
+      - openworkers-dash
       - openworkers-api
     volumes:
       - ${HTTP_TLS_CERTIFICATE}:/certs/ssl.crt:ro
@@ -79,9 +84,10 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+
   # OpenWorkers Runner
   openworkers-runner:
-    image: ghcr.io/openworkers/openworkers-runner:v0.7.5-v8
+    image: ghcr.io/openworkers/openworkers-runner:v0.7.6-v8
     env_file:
       - .env
     environment:
@@ -101,6 +107,7 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+
   # OpenWorkers Logs Service
   openworkers-logs:
     image: ghcr.io/openworkers/openworkers-logs:v0.1.4
@@ -111,6 +118,7 @@ services:
     depends_on:
       - postgres
       - nats
+
   # OpenWorkers Scheduler Service
   openworkers-scheduler:
     image: ghcr.io/openworkers/openworkers-scheduler:v0.1.3
@@ -124,7 +132,7 @@ services:
 
   # OpenWorkers Dashboard
   openworkers-dash:
-    image: ghcr.io/openworkers/openworkers-dash:v1.2.1
+    image: ghcr.io/openworkers/openworkers-dash:v1.2.2
     healthcheck:
       test:
         [
